Fixed hallway wrap in safari
Changed the width of the container to 100%

--- a/css/AM.css
+++ b/css/AM.css
@@ -90,7 +90,7 @@ hr {
 }
 
 .navContainer {
-	width:90%;
+	width:100%;
 	/*margin-left:auto;
 	margin-right:auto;*/
 }
